Add history cards and connect to slider functionality

--- a/app/assets/javascripts/pages/home/_about.js.erb
+++ b/app/assets/javascripts/pages/home/_about.js.erb
@@ -2,14 +2,14 @@
 
 $( document ).on('turbolinks:load', function() {
   var about = 'section#about';
-    var hero = about + ' div#hero';
+    var hero = about + ' div#about-hero';
     var pull = about + ' div#about-pull';
       var pullHandle = pull + ' div#about-pull-handle';
       var pullTondo = pull + ' div#about-pull-tondo';
       var pullContent = pull + ' div#about-pull-content';
-        var pullTease = pullContent + ' div.about-pull-tease';
-        var pullInfo = pullContent + ' div.about-pull-info';
-        var pullSummary = pullContent + ' div.about-pull-summary';
+        var pullTease = pullContent + ' div#about-pull-tease';
+        var pullInfo = pullContent + ' div#about-pull-info';
+        var pullSummary = pullContent + ' div#about-pull-summary';
       var pullBreadcrumbs = pull + ' div#about-pull-breadcrumbs';
         var pullBreadcrumb = pullBreadcrumbs + ' span';
     var contact = about + ' a#about-contact';
