--- a/app/views/pages/home/_history.html.erb
+++ b/app/views/pages/home/_history.html.erb
@@ -1,4 +1,9 @@
 <section id="history">
-  <div id="track"></div>
-  <div id="slider"></div>
+  <div id="history-track">
+    <div id="history-track-detents"></div>
+  </div>
+  
+  <div id="history-slider"></div>
+  
+  <div id="history-cards"></div>
 </section>
