--- a/app/assets/stylesheets/pages/home/_about.scss
+++ b/app/assets/stylesheets/pages/home/_about.scss
@@ -1,7 +1,7 @@
 section#about {
   background: map-get($mex, blue);
   
-  div#hero {
+  div#about-hero {
     @include display-flex;
     @include align-items(center);
     position: relative;
@@ -17,7 +17,7 @@ section#about {
       display: block;
       width: 100%;
       
-      span#hero-large {
+      span#about-hero-large {
         font-weight: normal;
         font-size: 60px;
         display: block;
@@ -28,7 +28,7 @@ section#about {
         @include respond-to(phone) { font-size: 30px; }
       }
       
-      span#hero-small {
+      span#about-hero-small {
         font-size: 45px;
         display: block;
         height: 50%;
@@ -125,7 +125,7 @@ section#about {
     div#about-pull-content {
       z-index: -1;
       
-      div.about-pull-tease, div.about-pull-info, div.about-pull-summary {
+      div#about-pull-tease, div#about-pull-info, div#about-pull-summary {
         @include display-flex;
         position: absolute;
         height: 100%;
@@ -144,7 +144,7 @@ section#about {
         }
       }
       
-      div.about-pull-tease {
+      div#about-pull-tease {
         font-size: 60px;
         
         @include align-items(flex-start);
@@ -152,7 +152,7 @@ section#about {
         @include respond-to(phone) { font-size: 30px; }
       }
       
-      div.about-pull-info {
+      div#about-pull-info {
         left: 30%;
         font-size: 50px;
         
@@ -167,7 +167,7 @@ section#about {
         }
       }
       
-      div.about-pull-summary {
+      div#about-pull-summary {
         left: 60%;
         font-size: 40px;
         padding-bottom: 32px;
