--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -4,30 +4,100 @@ section#history {
   width: 100%;
   position: relative;
   
-  div#track {
+  div#history-track {
     position: absolute;
     top: 30px;
     left: 30px;
     background: transparent;
     height: calc(100% - 60px);
     width: 20px;
-    transform: translateX(-50%);
+    // transform: translateX(-50%);
     border: 4px solid white;
-    border-radius: 15px;
+    // border-radius: 15px;
+    
+    @include transform(translateX(-50%));
+    @include border-radius(15px);
+  
+    div#history-track-detents {
+      span {
+      position: absolute;
+      // (track width - (track border * 2)) / 2
+      left: 6px;
+      background: transparent;
+      height: 10px;
+      width: 10px;
+      // transform: translate(-50%, -50%);
+      border: 2px solid white;
+      // border-radius: 50%;
+      z-index: 1;
+      
+      @include transform(translate(-50%, -50%));
+      @include border-radius(50%);
+      }
+    }
   }
   
-  div#slider {
+  div#history-slider {
     position: absolute;
     top: 30px;
     left: 30px;
     background: white;
     height: 40px;
     width: 40px;
-    transform: translate(-50%, -50%);
+    // transform: translate(-50%, -50%);
     border: 4px solid white;
-    border-radius: 50%;
+    // border-radius: 50%;
     cursor: pointer;
+    z-index: 1;
     
     @include user-select(none);
+    @include transform(translate(-50%, -50%));
+    @include border-radius(50%);
+  }
+  
+  div#history-cards {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    color: white;
+    
+    div.history-card {
+      position: absolute;
+      // 100% - ((track left - track width / 2) + track width + (track left - track width / 2) * 2 + burger width + burger right)
+      @include respond-to(phone) { width: calc(100% - 140px); }
+      @include respond-to(tablet) { width: calc(100% - 200px); }
+      @include respond-to(desktop) { width: calc(100% - 260px); }
+      height: calc(100% - 60px);
+      left: 110%;
+      top: 110%;
+      border: 4px solid white;
+      padding: 10px;
+      
+      @include transition(all, 1s, $normal-bezier, 0s);
+      @include border-radius(8px);
+      
+      div.history-card-head {
+        position: relative;
+        height: 15%;
+        width: 100%;
+      }
+      
+      div.history-card-body {
+        position: relative;
+        height: 85%;
+        width: 100%;
+      }
+      
+      &.focus {
+        // (track left - track width / 2) + track width + (track left - track width / 2)
+        left: 60px;
+        top: 30px;
+      }
+      
+      &.away {
+        left: 110%;
+        top: -110%;
+      }
+    }
   }
 }
