--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -1,8 +1,8 @@
 <section id="about">
-  <div id="hero">
+  <div id="about-hero">
     <div>
-      <span id="hero-large">THEY CALL ME GRIZ</span>
-      <span id="hero-small">ASPIRING UX DESIGNER</span>
+      <span id="about-hero-large">THEY CALL ME GRIZ</span>
+      <span id="about-hero-small">ASPIRING UX DESIGNER</span>
     </div>
   </div>
   
@@ -10,9 +10,9 @@
     <div id="about-pull-handle"><span>></span></div>
     <div id="about-pull-tondo"></div>
     <div id="about-pull-content">
-      <div class="about-pull-tease"></div>
-      <div class="about-pull-info"></div>
-      <div class="about-pull-summary"></div>
+      <div id="about-pull-tease"></div>
+      <div id="about-pull-info"></div>
+      <div id="about-pull-summary"></div>
     </div>
     <div id="about-pull-breadcrumbs"></div>
   </div>
