--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -1,7 +1,7 @@
 section#history {
   background: map-get($mex, blue);
-  height: 100%;
-  width: 100%;
+  box-sizing: content-box;
+  border-bottom: 100px solid map-get($mex, blue);
   position: relative;
   overflow-x: hidden;
   overflow-y: hidden;
