--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -13,9 +13,7 @@ section#history {
     background: transparent;
     height: calc(100% - 60px);
     width: 20px;
-    // transform: translateX(-50%);
     border: 4px solid white;
-    // border-radius: 15px;
     
     @include transform(translateX(-50%));
     @include border-radius(15px);
@@ -28,9 +26,7 @@ section#history {
       background: transparent;
       height: 10px;
       width: 10px;
-      // transform: translate(-50%, -50%);
       border: 2px solid white;
-      // border-radius: 50%;
       z-index: 1;
       
       @include transform(translate(-50%, -50%));
@@ -46,9 +42,7 @@ section#history {
     background: white;
     height: 40px;
     width: 40px;
-    // transform: translate(-50%, -50%);
     border: 4px solid white;
-    // border-radius: 50%;
     cursor: pointer;
     z-index: 1;
     
@@ -63,7 +57,7 @@ section#history {
     height: 100%;
     color: white;
     
-    div.history-card {
+    div#history-card-hero, div.history-card, div#history-card-contact {
       @include display-flex;
       @include align-items(center);
       position: absolute;
@@ -72,7 +66,6 @@ section#history {
       height: calc(100% - 60px);
       left: 110%;
       top: 110%;
-      // border: 4px solid white;
       padding: 10px;
       
       @include transition(all, 1s, $normal-bezier, 0s);
@@ -82,7 +75,7 @@ section#history {
         width: 100%;
       
         div.history-card-head {
-            display: block;
+          display: block;
           @include display-flex;
           @include align-items(center);
           position: relative;
@@ -90,6 +83,7 @@ section#history {
           width: 100%;
           font-size: 60px;
           border-bottom: 4px solid white;
+          padding-bottom: 8px;
           
           @include respond-to(phone) { font-size: 30px; }
           
@@ -102,7 +96,7 @@ section#history {
         }
         
         div.history-card-body {
-            display: block;
+          display: block;
           @include display-flex;
           @include align-items(flex-start);
           position: relative;
@@ -124,6 +118,63 @@ section#history {
       &.away {
         left: 110%;
         top: -110%;
+      }
+    }
+    
+    div#history-card-hero {
+      div {
+        div.history-card-body {
+          span {
+            display: block;
+            width: 100%;
+            text-align: center;
+            position: relative;
+          }
+        }
+      }
+    }
+    
+    div#history-card-contact {
+      div {
+        div.history-card-body {
+          justify-content: center;
+          
+          a#history-contact {
+            @include display-flex;
+            @include align-items(center);
+            position: relative;
+            height: 64px;
+            width: 40%;
+            text-decoration: none;
+            font-size: 32px;
+            text-align: center;
+            color: map-get($mex, blue);
+            background: white;
+              
+            @include respond-to(phone) {
+              width: calc(100% - 60px);
+              height: 48px;
+              font-size: 24px;
+            }
+            
+            @include border-radius(8px);
+              
+            span {
+              display: block;
+              width: 100%;
+              text-align: center;
+              position: relative;
+            }
+            
+            &.hover {
+              border: 4px solid map-get($mex, blue);
+            }
+            
+            &.mousedown {
+              transform: translateY(4px);
+            }
+          }
+        }
       }
     }
   }
