--- a/app/views/pages/home/_history.html.erb
+++ b/app/views/pages/home/_history.html.erb
@@ -5,5 +5,29 @@
   
   <div id="history-slider"></div>
   
-  <div id="history-cards"></div>
+  <div id="history-cards">
+    <div id="history-card-hero" class="focus">
+      <div>
+        <div class="history-card-head">
+          <span>A BRIEF LOOK AT MY PAST</span>
+        </div>
+        <div class="history-card-body">
+          <span>Take a moment to familiarize yourself with myself</span>
+        </div>
+      </div>
+    </div>
+    
+    <div id="history-card-contact">
+      <div>
+        <div class="history-card-head">
+          <span>Maybe you feel like reaching out</span>
+        </div>
+        <div class="history-card-body">
+          <a id="history-contact" href="#contact">
+            <span>CONTACT</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
