Tweak colors and add section transition gradients

--- a/app/assets/stylesheets/_/_custom.scss
+++ b/app/assets/stylesheets/_/_custom.scss
@@ -1,12 +1,10 @@
 // https://color.adobe.com/Mexican-Scheme-color-theme-9359348/
 $mex: (
-  // blue: #0144b4,
   blue: #42A5F5,
-  // green: #468f26,
   green: #75ce66,
   orange: #da9208,
   pink: #e41670,
-  purple: #9100ff,
+  purple: #966fd6,
   red: #c20305,
 );
 
