--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -1,7 +1,9 @@
 section#history {
-  background: map-get($mex, blue);
+  background: map-get($mex, purple);
   box-sizing: content-box;
-  border-bottom: 100px solid map-get($mex, blue);
+  border-bottom-width: 100px;
+  border-bottom-style: solid;
+  border-image: linear-gradient(to bottom, map-get($mex, purple) 0%, map-get($mex, green) 100%) 0 0 100% 0/0 0 100px 0 stretch;
   position: relative;
   overflow-x: hidden;
   overflow-y: hidden;
@@ -124,6 +126,10 @@ section#history {
     div#history-card-hero {
       div {
         div.history-card-body {
+          font-size: 30px;
+          
+          @include respond-to(phone) { font-size: 20px; }
+          
           span {
             display: block;
             width: 100%;
@@ -148,7 +154,7 @@ section#history {
             text-decoration: none;
             font-size: 32px;
             text-align: center;
-            color: map-get($mex, blue);
+            color: map-get($mex, purple);
             background: white;
               
             @include respond-to(phone) {
@@ -167,7 +173,7 @@ section#history {
             }
             
             &.hover {
-              border: 4px solid map-get($mex, blue);
+              border: 4px solid map-get($mex, purple);
             }
             
             &.mousedown {
