Change font units to em, fix anchor scrolling using click event instead of mouseup

--- a/app/assets/javascripts/pages/home/_about.js.erb
+++ b/app/assets/javascripts/pages/home/_about.js.erb
@@ -182,8 +182,9 @@ $( document ).on('turbolinks:load', function() {
       $('html, body').off('scroll mousedown wheel DOMMouseScroll mousewheel keyup touchmove');
     });
     
-    // + 50 for border
-    $('html, body').animate({scrollTop: $('#contact').offset().top + 50}, 3000, function() {
+    var top = $('#contact').offset().top;
+    var border = parseInt($('#contact').css("border-top-width"));
+    $('html, body').animate({scrollTop: top + border}, 3000, function() {
       $('html, body').off('scroll mousedown wheel DOMMouseScroll mousewheel keyup touchmove');
     });
     
