Alter colors and font sizes

--- a/app/assets/stylesheets/_/_custom.scss
+++ b/app/assets/stylesheets/_/_custom.scss
@@ -5,7 +5,8 @@ $mex: (
   orange: #da9208,
   pink: #e41670,
   purple: #966fd6,
-  red: #c20305,
+  red: #ff6666,
+  yellow: #d0c722,
 );
 
 $wobble-bezier: cubic-bezier(.1,3,.75,0.5);
