--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -2,7 +2,7 @@ header#navigation {
   
   nav#menu {
     position: fixed;
-    background-color: map-get($mex, orange);
+    background-color: map-get($mex, yellow);
     padding: 10% 0;
     top: 0;
     left: 0;
