Add color background variety

--- a/app/assets/javascripts/pages/home/_about.js.erb
+++ b/app/assets/javascripts/pages/home/_about.js.erb
@@ -28,7 +28,7 @@ $( document ).on('turbolinks:load', function() {
   
   var content = [
     {
-      tease: 'I AM GRIZ',
+      tease: 'I\'M LUKE',
       info: 'I enjoy creating beautifully designed experiences',
       summary: 'Contact me for your next website or job',
       tondo: '<%= asset_path "bear.jpg" %>',
