--- a/app/assets/stylesheets/pages/home/_about.scss
+++ b/app/assets/stylesheets/pages/home/_about.scss
@@ -45,7 +45,7 @@ section#about {
     &.shrink {
       @include transition(all, 1s, $normal-bezier, 0s);
       height: 33%;
-      padding-right: 10%;
+      padding-right: 30%;
     }
   }
   
@@ -287,7 +287,7 @@ section#about {
     }
     
     &.mousedown {
-      transform: translateY(4px);
+      @include transform(translateY(4px));
     }
   }
 }
