--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -178,7 +178,7 @@ section#history {
             }
             
             &.mousedown {
-              transform: translateY(4px);
+              @include transform(translateY(4px));
             }
           }
         }
