Add rotary functionality

--- a/app/assets/stylesheets/pages/home/_work.scss
+++ b/app/assets/stylesheets/pages/home/_work.scss
@@ -7,18 +7,32 @@ section#work {
   
   div#work-menu {
     position: absolute;
-    background: rgba(0,0,0,0.3);
+    // background: rgba(0,0,0,0.3);
     
-    div#work-menu-center, div.work-menu-petal {
+    div#work-menu-center {
       position: absolute;
       background: white;
       
       @include transform(translate(-50%,-50%));
       @include border-radius(50%);
+    }
+    
+    div#work-menu-petal-container {
+      position: relative;
+      height: 100%;
+      width: 100%;
+      background: rgba(0,0,0,0.3);
       
-      @include respond-to(phone) {
-        height: 48px;
-        width: 48px;
+      @include transition(transform, 1s, $normal-bezier, 0s);
+      
+      div.work-menu-petal {
+        position: absolute;
+        background: white;
+        
+        @include transform(translate(-50%,-50%));
+        // @include border-radius(50%);
+        
+        @include transition(transform, 1s, $normal-bezier, 0s);
       }
     }
   }
