--- a/app/views/pages/home/_work.html.erb
+++ b/app/views/pages/home/_work.html.erb
@@ -1,5 +1,6 @@
 <section id="work">
   <div id="work-menu">
     <div id="work-menu-center"></div>
+    <div id="work-menu-petal-container"></div>
   </div>
 </section>
