Add contact icon to header nav

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,12 @@
     <a href="#about"><span>about</span></a>
     <a href="#history"><span>history</span></a>
     <a href="#work"><span>work</span></a>
-    <a href="#contact"><span>contact</span></a>
+    <a href="#contact">
+      <span>contact</span>
+      <div>
+        <%= render "icons/contact" %>
+      </div>
+    </a>
   </nav>
 
   <div id="burger" class="lines">
