--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -32,33 +32,57 @@ header#navigation {
       
       @include transition(transform, 1s, $normal-bezier, 0s);
       
+      span {
+        display: inline-block;
+        width: 80%;
+        text-align: center;
+        position: relative;
+      }
+      
+      div {
+        display: inline-block;
+        text-align: center;
+        position: relative;
+        max-height: 100%;
+        max-width: 20%;
+        width: 64px;
+        padding: 4px;
+        
+        svg {
+          stroke: black;
+        }
+      }
+      
       &.hover {
         background-color: rgba(255,255,255,0.1);
+        color: white;
         
-        span {
-          color: white;
+        div {
+          svg {
+            stroke: white;
+          }
         }
       }
       
       &.mousedown {
         background-color: rgba(255,255,255,0.2);
+        color: white;
         
-        span {
-          color: white;
+        div {
+          svg {
+            stroke: white;
+          }
         }
       }
       
       &.active {
-        span {
-          color: white;
+        color: white;
+        
+        div {
+          svg {
+            stroke: white;
+          }
         }
-      }
-      
-      span {
-        display: block;
-        width: 100%;
-        text-align: center;
-        position: relative;
       }
     }
   }
