Add about and history icons

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,17 @@
 <header id="navigation" class="closed">
   <nav id="menu" role="navigation">
-    <a href="#about"><span>about</span></a>
-    <a href="#history"><span>history</span></a>
+    <a href="#about">
+      <span>about</span>
+      <div>
+        <%= render "icons/about" %>
+      </div>
+    </a>
+    <a href="#history">
+      <span>history</span>
+      <div>
+        <%= render "icons/history" %>
+      </div>
+    </a>
     <a href="#work"><span>work</span></a>
     <a href="#contact">
       <span>contact</span>
