Add scroll tracking reactions to burger menu and header menu nav links

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,12 @@
         <%= render "icons/history" %>
       </div>
     </a>
-    <a href="#work"><span>work</span></a>
+    <a href="#work">
+      <span>work</span>
+      <div>
+        <%= render "icons/work" %>
+      </div>
+    </a>
     <a href="#contact">
       <span>contact</span>
       <div>
