--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -34,7 +34,7 @@ header#navigation {
       
       span {
         display: inline-block;
-        width: 80%;
+        width: 70%;
         text-align: center;
         position: relative;
       }
@@ -150,6 +150,10 @@ header#navigation {
       
       &:nth-child(3) {
         margin-bottom: 25%;
+      }
+      
+      &.track {
+        background-color: #bbbbbb;
       }
     }
     
