--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -1,184 +1,197 @@
 section#history {
   background: map-get($mex, purple);
-  box-sizing: content-box;
-  border-top: 50px solid map-get($mex, purple);
-  border-bottom: 50px solid map-get($mex, purple);
+  // box-sizing: content-box;
+  // border-top: 0px solid map-get($mex, purple);
+  // border-bottom: 200px solid map-get($mex, purple);
+  // height: calc(100vh + 200px);
+  // padding-bottom: 200px;
   position: relative;
   overflow-x: hidden;
   overflow-y: hidden;
   
-  div#history-track {
+  div#history-container {
     position: absolute;
-    top: 30px;
-    left: 30px;
-    background: transparent;
-    height: calc(100% - 60px);
-    width: 20px;
-    border: 4px solid white;
+    top: 0;
+    left: 0;
+    // height: calc(100%);
+    width: 100%;
+    // z-index: 10;
     
-    @include transform(translateX(-50%));
-    @include border-radius(15px);
-  
-    div#history-track-detents {
-      span {
+    div#history-track {
       position: absolute;
-      // (track width - (track border * 2)) / 2
-      left: 6px;
+      top: 30px;
+      left: 30px;
       background: transparent;
-      height: 10px;
-      width: 10px;
-      border: 2px solid white;
+      height: calc(100% - 60px);
+      width: 20px;
+      border: 4px solid white;
+      cursor: pointer;
       z-index: 1;
       
+      @include transform(translateX(-50%));
+      @include border-radius(15px);
+    
+      div#history-track-detents {
+        span {
+        position: absolute;
+        // (track width - (track border * 2)) / 2
+        left: 6px;
+        background: transparent;
+        height: 10px;
+        width: 10px;
+        border: 2px solid white;
+        z-index: 1;
+        
+        @include transform(translate(-50%, -50%));
+        @include border-radius(50%);
+        }
+      }
+    }
+    
+    div#history-slider {
+      position: absolute;
+      top: 30px;
+      left: 30px;
+      background: white;
+      height: 40px;
+      width: 40px;
+      border: 4px solid white;
+      cursor: pointer;
+      z-index: 1;
+      
+      @include user-select(none);
       @include transform(translate(-50%, -50%));
       @include border-radius(50%);
-      }
     }
-  }
-  
-  div#history-slider {
-    position: absolute;
-    top: 30px;
-    left: 30px;
-    background: white;
-    height: 40px;
-    width: 40px;
-    border: 4px solid white;
-    cursor: pointer;
-    z-index: 1;
     
-    @include user-select(none);
-    @include transform(translate(-50%, -50%));
-    @include border-radius(50%);
-  }
-  
-  div#history-cards {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    color: white;
-    
-    div#history-card-hero, div.history-card, div#history-card-contact {
-      @include display-flex;
-      @include align-items(center);
+    div#history-cards {
       position: absolute;
-      // 100% - (track left * 3 - track width / 2)
-      width: calc(100% - 80px);
-      height: calc(100% - 60px);
-      left: 110%;
-      top: 110%;
-      padding: 10px;
-      background: darken(map-get($mex, purple), 10%);
+      width: 100%;
+      height: 100%;
+      color: white;
       
-      @include transition(all, 1s, $normal-bezier, 0s);
-      @include border-radius(8px);
-      
-      div {
-        display: block;
-        width: 100%;
-      
-        div.history-card-head {
-          display: block;
-          @include display-flex;
-          @include align-items(center);
-          position: relative;
-          height: 15%;
-          width: 100%;
-          font-size: 3.75em;
-          border-bottom: 4px solid white;
-          padding-bottom: 8px;
-          
-          @include respond-to(phone) { font-size: 2em; }
-          
-          span {
-            display: block;
-            width: 100%;
-            text-align: center;
-            position: relative;
-          }
-        }
-        
-        div.history-card-body {
-          display: block;
-          @include display-flex;
-          @include align-items(flex-start);
-          position: relative;
-          height: 85%;
-          width: 100%;
-          padding: 10px;
-          font-size: 2em;
-          
-          @include respond-to(phone) { font-size: 1em; }
-        }
-      }
-      
-      &.focus {
-        // (track left - track width / 2) + track width + (track left - track width / 2)
-        left: 60px;
-        top: 30px;
-      }
-      
-      &.away {
+      div#history-card-hero, div.history-card, div#history-card-contact {
+        @include display-flex;
+        @include align-items(center);
+        position: absolute;
+        // 100% - (track left * 3 - track width / 2)
+        width: calc(100% - 80px);
+        height: calc(100% - 60px);
         left: 110%;
-        top: -110%;
-      }
-    }
-    
-    div#history-card-hero {
-      div {
-        div.history-card-body {
-          font-size: 2em;
-          
-          @include respond-to(phone) { font-size: 1.5em; }
-          
-          span {
+        top: 110%;
+        padding: 10px;
+        background: darken(map-get($mex, purple), 10%);
+        
+        @include transition(all, 1s, $normal-bezier, 0s);
+        @include border-radius(8px);
+        
+        div {
+          display: block;
+          width: 100%;
+        
+          div.history-card-head {
             display: block;
-            width: 100%;
-            text-align: center;
-            position: relative;
-          }
-        }
-      }
-    }
-    
-    div#history-card-contact {
-      div {
-        div.history-card-body {
-          justify-content: center;
-          
-          a#history-contact {
             @include display-flex;
             @include align-items(center);
             position: relative;
-            height: 64px;
-            width: 40%;
-            text-decoration: none;
-            font-size: 1em;
-            text-align: center;
-            color: darken(map-get($mex, purple), 10%);
-            background: white;
-              
-            @include respond-to(phone) {
-              width: calc(100% - 60px);
-              height: 48px;
-              font-size: 1.5em;
-            }
+            height: 15%;
+            width: 100%;
+            font-size: 3.75em;
+            border-bottom: 4px solid white;
+            padding-bottom: 8px;
             
-            @include border-radius(8px);
-              
+            @include respond-to(phone) { font-size: 2em; }
+            
             span {
               display: block;
               width: 100%;
               text-align: center;
               position: relative;
             }
+          }
+          
+          div.history-card-body {
+            display: block;
+            @include display-flex;
+            @include align-items(flex-start);
+            position: relative;
+            height: 85%;
+            width: 100%;
+            padding: 10px;
+            font-size: 2em;
             
-            &.hover {
-              border: 4px solid darken(map-get($mex, purple), 10%);
+            @include respond-to(phone) { font-size: 1em; }
+          }
+        }
+        
+        &.focus {
+          // (track left - track width / 2) + track width + (track left - track width / 2)
+          left: 60px;
+          top: 30px;
+        }
+        
+        &.away {
+          left: 110%;
+          top: -110%;
+        }
+      }
+      
+      div#history-card-hero {
+        div {
+          div.history-card-body {
+            font-size: 2em;
+            
+            @include respond-to(phone) { font-size: 1.5em; }
+            
+            span {
+              display: block;
+              width: 100%;
+              text-align: center;
+              position: relative;
             }
+          }
+        }
+      }
+      
+      div#history-card-contact {
+        div {
+          div.history-card-body {
+            justify-content: center;
             
-            &.mousedown {
-              @include transform(translateY(4px));
+            a#history-contact {
+              @include display-flex;
+              @include align-items(center);
+              position: relative;
+              height: 64px;
+              width: 40%;
+              text-decoration: none;
+              font-size: 1em;
+              text-align: center;
+              color: darken(map-get($mex, purple), 10%);
+              background: white;
+                
+              @include respond-to(phone) {
+                width: calc(100% - 60px);
+                height: 48px;
+                font-size: 1.5em;
+              }
+              
+              @include border-radius(8px);
+                
+              span {
+                display: block;
+                width: 100%;
+                text-align: center;
+                position: relative;
+              }
+              
+              &.hover {
+                border: 4px solid darken(map-get($mex, purple), 10%);
+              }
+              
+              &.mousedown {
+                @include transform(translateY(4px));
+              }
             }
           }
         }
