--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -1,10 +1,5 @@
 section#history {
   background: map-get($mex, purple);
-  // box-sizing: content-box;
-  // border-top: 0px solid map-get($mex, purple);
-  // border-bottom: 200px solid map-get($mex, purple);
-  // height: calc(100vh + 200px);
-  // padding-bottom: 200px;
   position: relative;
   overflow-x: hidden;
   overflow-y: hidden;
@@ -13,55 +8,56 @@ section#history {
     position: absolute;
     top: 0;
     left: 0;
-    // height: calc(100%);
     width: 100%;
-    // z-index: 10;
     
-    div#history-track {
+    div#history-mechanism {
       position: absolute;
-      top: 30px;
-      left: 30px;
-      background: transparent;
       height: calc(100% - 60px);
-      width: 20px;
-      border: 4px solid white;
-      cursor: pointer;
+      top: 30px;
+      width: 60px;
+      background: transparent;
       z-index: 1;
+      cursor: pointer;
       
-      @include transform(translateX(-50%));
-      @include border-radius(15px);
-    
-      div#history-track-detents {
-        span {
+      div#history-track {
         position: absolute;
-        // (track width - (track border * 2)) / 2
-        left: 6px;
+        top: 0;
+        left: 50%;
         background: transparent;
-        height: 10px;
-        width: 10px;
-        border: 2px solid white;
-        z-index: 1;
+        height: 100%;
+        width: 20px;
+        border: 4px solid white;
         
-        @include transform(translate(-50%, -50%));
-        @include border-radius(50%);
+        @include transform(translateX(-50%));
+        @include border-radius(15px);
+      
+        div#history-track-detents {
+          span {
+          position: absolute;
+          left: 50%;
+          background: transparent;
+          height: 10px;
+          width: 10px;
+          border: 2px solid white;
+          
+          @include transform(translate(-50%, -50%));
+          @include border-radius(50%);
+          }
         }
       }
-    }
-    
-    div#history-slider {
-      position: absolute;
-      top: 30px;
-      left: 30px;
-      background: white;
-      height: 40px;
-      width: 40px;
-      border: 4px solid white;
-      cursor: pointer;
-      z-index: 1;
       
-      @include user-select(none);
-      @include transform(translate(-50%, -50%));
-      @include border-radius(50%);
+      div#history-slider {
+        position: absolute;
+        left: 50%;
+        background: white;
+        height: 40px;
+        width: 40px;
+        border: 4px solid white;
+        
+        @include user-select(none);
+        @include transform(translate(-50%, -50%));
+        @include border-radius(50%);
+      }
     }
     
     div#history-cards {
@@ -70,11 +66,11 @@ section#history {
       height: 100%;
       color: white;
       
-      div#history-card-hero, div.history-card, div#history-card-contact {
+      div.history-card {
         @include display-flex;
         @include align-items(center);
         position: absolute;
-        // 100% - (track left * 3 - track width / 2)
+        // 100% - mechanism width - (mechanism width - track width) / 2
         width: calc(100% - 80px);
         height: calc(100% - 60px);
         left: 110%;
@@ -125,7 +121,7 @@ section#history {
         }
         
         &.focus {
-          // (track left - track width / 2) + track width + (track left - track width / 2)
+          // mechanism width
           left: 60px;
           top: 30px;
         }
