--- a/app/views/pages/home/_history.html.erb
+++ b/app/views/pages/home/_history.html.erb
@@ -1,13 +1,15 @@
 <section id="history">
   <div id="history-container">
-    <div id="history-track">
-      <div id="history-track-detents"></div>
+    <div id="history-mechanism">
+      <div id="history-track">
+        <div id="history-track-detents"></div>
+      </div>
+      
+      <div id="history-slider"></div>
     </div>
     
-    <div id="history-slider"></div>
-    
     <div id="history-cards">
-      <div id="history-card-hero" class="focus">
+      <div id="history-card-hero" class="focus history-card">
         <div>
           <div class="history-card-head">
             <span>A BRIEF LOOK AT MY PAST</span>
@@ -18,7 +20,7 @@
         </div>
       </div>
       
-      <div id="history-card-contact">
+      <div id="history-card-contact" class="history-card">
         <div>
           <div class="history-card-head">
             <span>Maybe you feel like reaching out</span>
