--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,27 +2,19 @@
   <nav id="menu" role="navigation">
     <a href="#about">
       <span>about</span>
-      <div>
-        <%= render "icons/about" %>
-      </div>
+      <div><%= render "icons/about" %></div>
     </a>
     <a href="#history">
       <span>history</span>
-      <div>
-        <%= render "icons/history" %>
-      </div>
+      <div><%= render "icons/history" %></div>
     </a>
     <a href="#work">
       <span>work</span>
-      <div>
-        <%= render "icons/work" %>
-      </div>
+      <div><%= render "icons/work" %></div>
     </a>
     <a href="#contact">
       <span>contact</span>
-      <div>
-        <%= render "icons/contact" %>
-      </div>
+      <div><%= render "icons/contact" %></div>
     </a>
   </nav>
 
