--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -14,7 +14,11 @@
       <div id="about-pull-info"></div>
       <div id="about-pull-summary"></div>
     </div>
-    <div id="about-pull-breadcrumbs"></div>
+    <div id="about-pull-breadcrumbs">
+      <div><%= render "icons/beard" %></div>
+      <div><%= render "icons/leigh" %></div>
+      <div><%= render "icons/hound" %></div>
+    </div>
   </div>
   
   <a id="about-contact" href="#contact">
